# micro-Pascal

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  __outputForAll.sh  allBuild.sh  annotated.html  annotated_dup.js  classes.html  configure.sh  count.sh  dir_000001_000000.html  dir_000002_000001.html  dir_000003_000000.html  dir_000004_000000.html  dir_000004_000001.html  dir_000004_000008.html  dir_000005_000000.html  dir_000005_000001.html  dir_000005_000004.html  dir_000006_000000.html  dir_000006_000001.html  dir_000009_000004.html  dir_000009_000008.html  dir_000010_000004.html  dir_00703cdaf0faf1f913b7e7a954ea4d02.html  dir_00703cdaf0faf1f913b7e7a954ea4d02.js  dir_00703cdaf0faf1f913b7e7a954ea4d02_dep.map  dir_00703cdaf0faf1f913b7e7a954ea4d02_dep.md5  dir_1cf0343446ecc9c1285d6594d51075d7.html  dir_1cf0343446ecc9c1285d6594d51075d7.js  dir_1cf0343446ecc9c1285d6594d51075d7_dep.map  dir_1cf0343446ecc9c1285d6594d51075d7_dep.md5  dir_2e6816fb9f8e401417217e9e92f8bab9.html  dir_2e6816fb9f8e401417217e9e92f8bab9_dep.map  dir_2e6816fb9f8e401417217e9e92f8bab9_dep.md5  dir_3143bd6d7227c8dd39535296d91ba825.html  dir_3143bd6d7227c8dd39535296d91ba825.js  dir_3143bd6d7227c8dd39535296d91ba825_dep.map  dir_3143bd6d7227c8dd39535296d91ba825_dep.md5  (+163 more)
.github/workflows/: c-cpp.yml  draw.yml  main.yaml
d0/d0f/: test_lexer__1_8cpp.html  test_lexer__1_8cpp.js  test_lexer__1_8cpp_a3b6ede1be65d16b5615fc02742e1c022_cgraph.map  test_lexer__1_8cpp_a3b6ede1be65d16b5615fc02742e1c022_cgraph.md5  test_lexer__1_8cpp_a42b988f5ceb814376db8a2df3c933b15_cgraph.map  test_lexer__1_8cpp_a42b988f5ceb814376db8a2df3c933b15_cgraph.md5  test_lexer__1_8cpp_a5332e1a4788ab4fa208c0f2022af1d6a_cgraph.map  test_lexer__1_8cpp_a5332e1a4788ab4fa208c0f2022af1d6a_cgraph.md5  test_lexer__1_8cpp_a685fd1876eec959aa220812db64464f1_cgraph.map  test_lexer__1_8cpp_a685fd1876eec959aa220812db64464f1_cgraph.md5  test_lexer__1_8cpp_a685fd1876eec959aa220812db64464f1_icgraph.map  test_lexer__1_8cpp_a685fd1876eec959aa220812db64464f1_icgraph.md5  test_lexer__1_8cpp_a7b7a29841c8a633a51d036c8266cc531_cgraph.map  test_lexer__1_8cpp_a7b7a29841c8a633a51d036c8266cc531_cgraph.md5  test_lexer__1_8cpp_ab32b6906cc4e6cc339e245f6bd671744_cgraph.map  test_lexer__1_8cpp_ab32b6906cc4e6cc339e245f6bd671744_cgraph.md5  test_lexer__1_8cpp_ae498553f9b239b6d1b5e83e19b058d36_cgraph.map  test_lexer__1_8cpp_ae498553f9b239b6d1b5e83e19b058d36_cgraph.md5  test_lexer__1_8cpp_afe0ab16670b5ca30a457e57de6936065_cgraph.map  test_lexer__1_8cpp_afe0ab16670b5ca30a457e57de6936065_cgraph.md5  test_lexer__1_8cpp_source.html
d0/d11/: class_i_token.html  class_i_token.js  class_i_token_a3e73305ee0ac36d0bf5f26b649589b24_icgraph.map  class_i_token_a3e73305ee0ac36d0bf5f26b649589b24_icgraph.md5  class_i_token_a4fa3435db7157ca7316d4e4aee1df4c0_icgraph.map  class_i_token_a4fa3435db7157ca7316d4e4aee1df4c0_icgraph.md5  class_i_token_a568cb9d98839eff3fd758f419a76b092_icgraph.map  class_i_token_a568cb9d98839eff3fd758f419a76b092_icgraph.md5  class_i_token_a968b6332dda18b7049a4737be3ffd036_icgraph.map  class_i_token_a968b6332dda18b7049a4737be3ffd036_icgraph.md5  class_i_token_aa0b191c52b609726899a0db5115ec0ef_icgraph.map  class_i_token_aa0b191c52b609726899a0db5115ec0ef_icgraph.md5  class_i_token_ab582fbd31b3afc11875dddf2d53a6aa7_icgraph.map  class_i_token_ab582fbd31b3afc11875dddf2d53a6aa7_icgraph.md5  class_i_token_ac7f0a800d7a9e8608bab0360c76d735a_icgraph.map  class_i_token_ac7f0a800d7a9e8608bab0360c76d735a_icgraph.md5  class_i_token_ac8ca7f7e601ae49ad573167a4e9429cb_icgraph.map  class_i_token_ac8ca7f7e601ae49ad573167a4e9429cb_icgraph.md5
d0/d14/: class_stack.html  class_stack.js  class_stack_a1a5f5b9d939b621e1c2cf1cdb815f789_cgraph.map  class_stack_a1a5f5b9d939b621e1c2cf1cdb815f789_cgraph.md5  class_stack_a1a5f5b9d939b621e1c2cf1cdb815f789_icgraph.map  class_stack_a1a5f5b9d939b621e1c2cf1cdb815f789_icgraph.md5  class_stack_a430417da7ea691a55ba46526425d6778_cgraph.map  class_stack_a430417da7ea691a55ba46526425d6778_cgraph.md5  class_stack_a430417da7ea691a55ba46526425d6778_icgraph.map  class_stack_afd897bd6ebbb129691666d7c33e7ea09_cgraph.map  class_stack_afd897bd6ebbb129691666d7c33e7ea09_cgraph.md5  (+6 more)
examples/: example_visiter.cpp
forReadme/: exmp1.txt
include/: AST.hpp  ASTFactory.hpp  ASTclasses.hpp  Analyze.hpp  Analyzer.hpp  Lexer.hpp  List.cpp  List.hpp  List.tpp  PascalRules.hpp  PascalSyntax.hpp  PascalTokens.hpp  ProgramData.hpp  Queue.cpp  Stack.cpp  SyntExp.cpp  SyntExp.hpp  Syntax.hpp  Token.hpp  Visitor.hpp  sup.hpp  supAlgs.hpp
progs/: out.dot  prog1.txt  prog2.txt  prog3.txt  prog4.txt  prog5.txt  prog6.txt  prog7.txt  tt.txt
schemes/: diagram.xhtml  scheme.md  syntax.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+127 more)
src/: AST.cpp  ASTFactory.cpp  Analyze.cpp  Analyzer.cpp  Lexer.cpp  PascalSyntax.cpp  SyntExp.cpp  Syntax.cpp  Token.cpp  Visitor.cpp
tests/: CMakeLists.txt
tests/lexer/: lexerTestRules.hpp  testLexer_1.cpp  text3.txt  text4.txt  text5.txt  text6.txt  text7.txt
tests/semantic/: testSemantic.cpp  textM1.txt  textM2.txt  textM3.txt  textM4.txt  textM5.txt  textM6.txt  textM7.txt
tests/structures/: testList.cpp  testQueue.cpp  testStack.cpp
tests/syntax/: testSyntax.cpp  textS1.txt  textS2.txt  textS3.txt  textS4.txt  textS5.txt  textS6.txt  textS8.txt  textS9.txt
(+2711 files in other folders)
